tests/snapshots/examples_fixtures/type_system__failing__49_top_level_effect_with_existing_main.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/49_top_level_effect_with_existing_main.flx
== compile ==
failed (compile)
== diagnostics ==
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  examples/type_system/failing/49_top_level_effect_with_existing_main.flx:3:1
  |
3 | print("top-level")
  | ^^^^^^^^^^^^^^^^^^
  | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.
== stdout ==
<not executed>
